fixing data, altering grid value, tweaking css
removed NA listings in data
made grid value dot on right side for prediction
tweaked location of grid value and dot
made sidebar options full width
made sure sidebar didn't go underneat the open/close button
made sure sidebar wasn't too tall (it made scroll bar) by hiding sidebar
svgs

--- a/dvtDashboard/mainApp/static/css/landing-style.css
+++ b/dvtDashboard/mainApp/static/css/landing-style.css
@@ -81,7 +81,7 @@ sl-tab-panel::part(base) {
   overflow-y: auto;
   display: grid;
   row-gap: var(--sl-spacing-x-small);
-  padding: var(--sl-spacing-small);
+  padding: var(--sl-spacing-large);
 }
 
 .hide-sidebar-button {
@@ -99,7 +99,8 @@ sl-tab-panel::part(base) {
   width: 100%;
   overflow: hidden;
   padding: var(--sl-spacing-x-small);
-  display: flex;
+  display: none;
+  /* display: flex; */
   flex-direction: column;
 }
 
